极客时间云原生训练营/101/module12/istio/tracing/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service0
spec:
  gateways:
    - service0-v1
  hosts:
    - '*'
  http:
  - match:
      - uri:
          exact: /service0-v1
    route:
      - destination:
          host: service0-v1
          port:
            number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service0
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http-service0-v1
        number: 80
        protocol: HTTP
